--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     </div>
                 </div>
             </div>
-            <div class="stages">
+            <div class="stages py-5">
                 <div class="container-md px-3 px-md-0">
                     <div class="title pt-5">Этапы работы</div>
                     <div class="stages__container row text-center justify-content-md-between justify-content-center py-5">
