--- a/index.html
+++ b/index.html
@@ -411,156 +411,156 @@
                     </div>
                     <div class="faq__blocks py-5">
                         <div class="faq__block__container">
-                            <div class="faq__block faq__question  mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block faq__question  mb-5  align-items-center">
                                 <div class="col-10">
                                     Какие документы я должен передать вам для начала работы?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container">
-                            <div class="faq__block faq__question mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block faq__question mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Каким образом будет сдаваться отчётность?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Мы вели бухгалтерский учётв 1С. Будете ли вы продолжать вести учёт в моей базе?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Могу ли я получать у вас полноценные консультации по вопросам налогооблажения,
                                     внутреннего учёта и другим вопросам, касающимся финансовой деятельности
                                     моей компании?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Несёте ли вы ответственность за свою работу?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Что нужно с моей стороны, чтобы бухучует велся корректно?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Кто будет выписывать текущие первичные документы - накладные, счета, счета-фактуры, приходные и расходные кассовые ордера?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Будете ли выдавать рекомендации по оформлению первичных документов, консультировать наших работников по этим вопросам?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     От чего зависит стоимость бухгалтерского обслуживания?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Если в моей компании не будет деятельности и нужно будет сдавать только нулевые отчеты, стоимость услуг изменится?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Нужно ли мне будет выезжать из офиса в налоговую, тратить на это личное время?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Вы имеете доступ к базе, где ведется ваш бух.учет. Получаете электронные уведомления от контролирующих органов по приняттию отчетов. Как я могу проверить качество вашей работы?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Могу ли я посмотреть образец договора до его подписания?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
                             </div>
                         </div>
                         <div class="faq__block__container faq-hidden">
-                            <div class="faq__block mb-5 row align-items-center justify-content-between">
+                            <div class="faq__block mb-5 align-items-center justify-content-between">
                                 <div class="col-10">
                                     Могу ли я быть уверен, что о моих данных не узнают конкуренты, 3-и лица?
                                 </div>
-                                <div class="col-1 arrow-icon"></div>
+                                <div class="arrow-icon"></div>
                             </div>
                             <div class="faq__block faq__answer mb-5">
                                 Ответ на вопрос здесь
@@ -680,6 +680,7 @@
                                     <span>CINNABON</span> - самые яркие представители Франшизы всемирно известного бренда вкуснуйших булочек с корицей в Сочи! 
                                 </div>
                             </div>
+                            <div class="slider__item void"></div>
                         </div>
                     </div>
                 </div>
@@ -695,16 +696,16 @@
                     <div class="review-slides">
                         <div class="review-slider">
                             <div class="slider-item">
-                                <img src="img/reviews/review_1.png" alt="">
+                                <img class="minimized" src="img/reviews/review_1.png" alt="">
                             </div>
                             <div class="slider-item">
-                                <img src="img/reviews/review_2.png" alt="">
+                                <img class="minimized" src="img/reviews/review_2.png" alt="">
                             </div>
                             <div class="slider-item">
-                                <img src="img/reviews/review_3.png" alt="">
+                                <img class="minimized" src="img/reviews/review_3.png" alt="">
                             </div>
                             <div class="slider-item">
-                                <img src="img/reviews/review_4.png" alt="">
+                                <img class="minimized" src="img/reviews/review_4.png" alt="">
                             </div>
                             <div class="slider-item void"></div>
                         </div>
